fix(atomic): improved contrast between the stars and their background
https://coveord.atlassian.net/browse/KIT-1761

--- a/packages/atomic/src/components/search/atomic-rating/atomic-rating.pcss
+++ b/packages/atomic/src/components/search/atomic-rating/atomic-rating.pcss
@@ -1,13 +1,28 @@
 /**
- * @prop --atomic-rating-facet-icon-active-color: Color of the icon when active.
+ * @prop --atomic-rating-icon-active-color: Color of the icon when active.
  */
 .icon-active {
-  color: var(--atomic-rating-facet-icon-active-color, #f4c315);
+  // TODO: Remove "facet" variable in v2.
+  color: var(--atomic-rating-icon-active-color, var(--atomic-rating-facet-icon-active-color, #f6ce3c));
 }
 
 /**
- * @prop --atomic-rating-facet-icon-inactive-color: Color of the icon when inactive.
+ * @prop --atomic-rating-icon-inactive-color: Color of the icon when inactive.
  */
 .icon-inactive {
-  color: var(--atomic-rating-facet-icon-inactive-color, var(--atomic-neutral));
+  // TODO: Remove "facet" variable in v2.
+  color: var(
+    --atomic-rating-icon-inactive-color,
+    var(--atomic-rating-facet-icon-inactive-color, var(--atomic-neutral))
+  );
+}
+
+/**
+ * @prop --atomic-rating-icon-outline: Color of the icon's outline.
+ */
+.icon-active,
+.icon-inactive {
+  & svg path {
+    stroke: var(--atomic-rating-icon-outline, #846806);
+  }
 }
